deploy: 1de2e944da792c843521d7b02c82fbc7af9eeedd

--- a/pull/58/classes/EmbedWidget.html
+++ b/pull/58/classes/EmbedWidget.html
@@ -27,7 +27,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">EmbedWidget</span></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/cd8ff53/src/widgets/EmbedWidget.ts#L15">src/widgets/EmbedWidget.ts:15</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1de2e94/src/widgets/EmbedWidget.ts#L15">src/widgets/EmbedWidget.ts:15</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -76,7 +76,7 @@
 <h4 class="tsd-returns-title">Returns <a href="EmbedWidget.html" class="tsd-signature-type tsd-kind-class">EmbedWidget</a></h4><aside class="tsd-sources">
 <p>Overrides Widget.constructor</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/cd8ff53/src/widgets/EmbedWidget.ts#L16">src/widgets/EmbedWidget.ts:16</a></li></ul></aside></li></ul></section></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1de2e94/src/widgets/EmbedWidget.ts#L16">src/widgets/EmbedWidget.ts:16</a></li></ul></aside></li></ul></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Properties</h2>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="analyticsApi" class="tsd-anchor"></a>
@@ -84,25 +84,25 @@
 <div class="tsd-signature"><span class="tsd-kind-property">analytics<wbr/>Api</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type ">default</span></div><aside class="tsd-sources">
 <p>Inherited from Widget.analyticsApi</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/cd8ff53/src/widgets/Widget.ts#L45">src/widgets/Widget.ts:45</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1de2e94/src/widgets/Widget.ts#L45">src/widgets/Widget.ts:45</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="container" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>container</span><a href="#container" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">container</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type ">HTMLElement</span></div><aside class="tsd-sources">
 <p>Inherited from Widget.container</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/cd8ff53/src/widgets/Widget.ts#L49">src/widgets/Widget.ts:49</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1de2e94/src/widgets/Widget.ts#L49">src/widgets/Widget.ts:49</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="content" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>content</span><a href="#content" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">content</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
 <p>Inherited from Widget.content</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/cd8ff53/src/widgets/Widget.ts#L44">src/widgets/Widget.ts:44</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1de2e94/src/widgets/Widget.ts#L44">src/widgets/Widget.ts:44</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="context" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>context</span><a href="#context" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">context</span><span class="tsd-signature-symbol">:</span> <a href="../types/WidgetContext.html" class="tsd-signature-type tsd-kind-type-alias">WidgetContext</a></div><aside class="tsd-sources">
 <p>Inherited from Widget.context</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/cd8ff53/src/widgets/Widget.ts#L47">src/widgets/Widget.ts:47</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1de2e94/src/widgets/Widget.ts#L47">src/widgets/Widget.ts:47</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="hide" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>hide</span><a href="#hide" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">hide</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> = ...</span></div>
@@ -115,13 +115,13 @@
 <li class="tsd-description">
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4></li></ul></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/cd8ff53/src/widgets/EmbedWidget.ts#L115">src/widgets/EmbedWidget.ts:115</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1de2e94/src/widgets/EmbedWidget.ts#L117">src/widgets/EmbedWidget.ts:117</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="npmCdn" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>npm<wbr/>Cdn</span><a href="#npmCdn" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">npm<wbr/>Cdn</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
 <p>Inherited from Widget.npmCdn</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/cd8ff53/src/widgets/Widget.ts#L48">src/widgets/Widget.ts:48</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1de2e94/src/widgets/Widget.ts#L48">src/widgets/Widget.ts:48</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="show" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>show</span><a href="#show" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">show</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> = ...</span></div>
@@ -132,21 +132,24 @@
 <ul class="tsd-signatures">
 <li class="tsd-signature" id="show.__type-2.__type-3"><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 <li class="tsd-description">
-<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4></li></ul></li></ul></div><aside class="tsd-sources">
+<div class="tsd-comment tsd-typography"><p>Un-hide if element is available and refresh data</p>
+</div>
+<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
+<div class="tsd-comment tsd-typography"></div></li></ul></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/cd8ff53/src/widgets/EmbedWidget.ts#L114">src/widgets/EmbedWidget.ts:114</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1de2e94/src/widgets/EmbedWidget.ts#L116">src/widgets/EmbedWidget.ts:116</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="type" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>type</span><a href="#type" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">type</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
 <p>Inherited from Widget.type</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/cd8ff53/src/widgets/Widget.ts#L43">src/widgets/Widget.ts:43</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1de2e94/src/widgets/Widget.ts#L43">src/widgets/Widget.ts:43</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="widgetApi" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>widget<wbr/>Api</span><a href="#widgetApi" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">widget<wbr/>Api</span><span class="tsd-signature-symbol">:</span> <a href="WidgetApi.html" class="tsd-signature-type tsd-kind-class">WidgetApi</a></div><aside class="tsd-sources">
 <p>Inherited from Widget.widgetApi</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/cd8ff53/src/widgets/Widget.ts#L46">src/widgets/Widget.ts:46</a></li></ul></aside></section></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1de2e94/src/widgets/Widget.ts#L46">src/widgets/Widget.ts:46</a></li></ul></aside></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Methods</h2>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="_createFrame" class="tsd-anchor"></a>
@@ -157,7 +160,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">HTMLIFrameElement</span></h4><aside class="tsd-sources">
 <p>Inherited from Widget._createFrame</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/cd8ff53/src/widgets/Widget.ts#L96">src/widgets/Widget.ts:96</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1de2e94/src/widgets/Widget.ts#L96">src/widgets/Widget.ts:96</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="_findElement" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>_find<wbr/>Element</span><a href="#_findElement" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited">
@@ -166,7 +169,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">HTMLElement</span></h4><aside class="tsd-sources">
 <p>Inherited from Widget._findElement</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/cd8ff53/src/widgets/Widget.ts#L63">src/widgets/Widget.ts:63</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1de2e94/src/widgets/Widget.ts#L63">src/widgets/Widget.ts:63</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="_findFrame" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>_find<wbr/>Frame</span><a href="#_findFrame" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited">
@@ -175,7 +178,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">null</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type ">HTMLIFrameElement</span></h4><aside class="tsd-sources">
 <p>Inherited from Widget._findFrame</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/cd8ff53/src/widgets/Widget.ts#L111">src/widgets/Widget.ts:111</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1de2e94/src/widgets/Widget.ts#L111">src/widgets/Widget.ts:111</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="close" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>close</span><a href="#close" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -183,7 +186,7 @@
 <li class="tsd-description">
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/cd8ff53/src/widgets/EmbedWidget.ts#L98">src/widgets/EmbedWidget.ts:98</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1de2e94/src/widgets/EmbedWidget.ts#L100">src/widgets/EmbedWidget.ts:100</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="load" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>load</span><a href="#load" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -192,15 +195,18 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <p>Overrides Widget.load</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/cd8ff53/src/widgets/EmbedWidget.ts#L20">src/widgets/EmbedWidget.ts:20</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1de2e94/src/widgets/EmbedWidget.ts#L20">src/widgets/EmbedWidget.ts:20</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="open" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>open</span><a href="#open" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
 <li class="tsd-signature tsd-anchor-link" id="open.open-1"><span class="tsd-kind-call-signature">open</span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span><a href="#open.open-1" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></li>
 <li class="tsd-description">
-<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4><aside class="tsd-sources">
+<div class="tsd-comment tsd-typography"><p>Un-hide if element is available and refresh data</p>
+</div>
+<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
+<div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/cd8ff53/src/widgets/EmbedWidget.ts#L81">src/widgets/EmbedWidget.ts:81</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1de2e94/src/widgets/EmbedWidget.ts#L83">src/widgets/EmbedWidget.ts:83</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="reload" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>reload</span><a href="#reload" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited">
@@ -226,7 +232,7 @@ Primarily for Classic widgets with registration</p>
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <p>Inherited from Widget.reload</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/cd8ff53/src/widgets/Widget.ts#L260">src/widgets/Widget.ts:260</a></li></ul></aside></li></ul></section></section></div>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1de2e94/src/widgets/Widget.ts#L260">src/widgets/Widget.ts:260</a></li></ul></aside></li></ul></section></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
