deploy: 0acc249e83e14078a3e869f70092d465438f57ac

--- a/pull/58/functions/events.html
+++ b/pull/58/functions/events.html
@@ -24,9 +24,12 @@
 </div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">EventsApi</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></h4><p>EventsApi static instance</p>
 
-<div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
+<div class="tsd-comment tsd-typography">
+<h4>Example</h4><pre><code class="language-ts"><span class="hl-7">squatch</span><span class="hl-5">.</span><span class="hl-8">events</span><span class="hl-5">().</span><span class="hl-8">track</span><span class="hl-5">({ ... })</span>
+</code><button>Copy</button></pre>
+</div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/636c229/src/squatch.ts#L79">src/squatch.ts:79</a></li></ul></aside></li></ul></section></div>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/0acc249/src/squatch.ts#L90">src/squatch.ts:90</a></li></ul></aside></li></ul></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
