--- a/pull/58/functions/_auto.html
+++ b/pull/58/functions/_auto.html
@@ -20,6 +20,7 @@
 <li class="tsd-signature tsd-anchor-link" id="_auto"><span class="tsd-kind-call-signature">_auto</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">configIn</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="../interfaces/WidgetResult.html" class="tsd-signature-type tsd-kind-interface">WidgetResult</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span><a href="#_auto" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><g stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" id="icon-anchor"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M10 14a3.5 3.5 0 0 0 5 0l4 -4a3.5 3.5 0 0 0 -5 -5l-.5 .5"></path><path d="M14 10a3.5 3.5 0 0 0 -5 0l-4 4a3.5 3.5 0 0 0 5 5l.5 -.5"></path></g></svg></a></li>
 <li class="tsd-description">
 <div class="tsd-comment tsd-typography"><p>Extracts widget configuration from <code>_saasquatchExtra</code> UTM parameter. Initialises <code>squatch</code> and renders the widget as a <a href="../classes/PopupWidget.html" class="tsd-kind-class">PopupWidget</a> via static instanct of <a href="../classes/Widgets.html" class="tsd-kind-class">Widgets</a>.</p>
+<p>Called by default on startup via the loader script.</p>
 </div>
 <div class="tsd-parameters">
 <h4 class="tsd-parameters-title">Parameters</h4>
@@ -29,7 +30,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="../interfaces/WidgetResult.html" class="tsd-signature-type tsd-kind-interface">WidgetResult</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></h4>
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/636c229/src/squatch.ts#L96">src/squatch.ts:96</a></li></ul></aside></li></ul></section></div>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/0acc249/src/squatch.ts#L116">src/squatch.ts:116</a></li></ul></aside></li></ul></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
