--- a/pull/58/functions/api.html
+++ b/pull/58/functions/api.html
@@ -24,9 +24,12 @@
 </div>
 <h4 class="tsd-returns-title">Returns <a href="../classes/WidgetApi.html" class="tsd-signature-type tsd-kind-class">WidgetApi</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></h4><p>WidgetApi static instance</p>
 
-<div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
+<div class="tsd-comment tsd-typography">
+<h4>Example</h4><pre><code class="language-ts"><span class="hl-7">squatch</span><span class="hl-5">.</span><span class="hl-8">api</span><span class="hl-5">().</span><span class="hl-8">render</span><span class="hl-5">({ ... })</span><br/><span class="hl-7">squatch</span><span class="hl-5">.</span><span class="hl-8">api</span><span class="hl-5">().</span><span class="hl-8">upsertUser</span><span class="hl-5">({ ... })</span><br/><span class="hl-7">squatch</span><span class="hl-5">.</span><span class="hl-8">api</span><span class="hl-5">().</span><span class="hl-8">squatchReferralCookie</span><span class="hl-5">()</span>
+</code><button>Copy</button></pre>
+</div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/636c229/src/squatch.ts#L55">src/squatch.ts:55</a></li></ul></aside></li></ul></section></div>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/0acc249/src/squatch.ts#L59">src/squatch.ts:59</a></li></ul></aside></li></ul></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
