--- a/pull/58/functions/widget.html
+++ b/pull/58/functions/widget.html
@@ -20,6 +20,7 @@
 <li class="tsd-signature tsd-anchor-link" id="widget"><span class="tsd-kind-call-signature">widget</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">widgetConfig</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="../interfaces/WidgetResult.html" class="tsd-signature-type tsd-kind-interface">WidgetResult</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span><a href="#widget" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><g stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" id="icon-anchor"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M10 14a3.5 3.5 0 0 0 5 0l4 -4a3.5 3.5 0 0 0 -5 -5l-.5 .5"></path><path d="M14 10a3.5 3.5 0 0 0 -5 0l-4 4a3.5 3.5 0 0 0 5 5l.5 -.5"></path></g></svg></a></li>
 <li class="tsd-description">
 <div class="tsd-comment tsd-typography"><p>Entry-point for high level API to render a widget using the instance of <a href="../classes/Widgets.html" class="tsd-kind-class">Widgets</a> created when you call <a href="../modules.html" class="tsd-kind-project">#init init</a>.</p>
+<p>Read the <a href="../classes/Widgets.html#render" class="tsd-kind-method">render</a> docs.</p>
 </div>
 <div class="tsd-parameters">
 <h4 class="tsd-parameters-title">Parameters</h4>
@@ -27,9 +28,12 @@
 <li>
 <h5><span class="tsd-kind-parameter">widgetConfig</span>: <a href="../interfaces/WidgetConfig.html" class="tsd-signature-type tsd-kind-interface">WidgetConfig</a></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="../interfaces/WidgetResult.html" class="tsd-signature-type tsd-kind-interface">WidgetResult</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">undefined</span></h4>
-<div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
+<div class="tsd-comment tsd-typography">
+<h4>Example</h4><pre><code class="language-ts"><span class="hl-7">squatch</span><span class="hl-5">.</span><span class="hl-8">widget</span><span class="hl-5">().</span><span class="hl-8">then</span><span class="hl-5">(</span><span class="hl-7">res</span><span class="hl-5"> </span><span class="hl-6">=&gt;</span><span class="hl-5"> {</span><br/><span class="hl-5">  </span><span class="hl-6">const</span><span class="hl-5"> </span><span class="hl-13">widget</span><span class="hl-5"> = </span><span class="hl-7">res</span><span class="hl-5">.</span><span class="hl-7">widget</span><br/><span class="hl-5">}).</span><span class="hl-8">catch</span><span class="hl-5">(</span><span class="hl-7">e</span><span class="hl-5"> </span><span class="hl-6">=&gt;</span><span class="hl-5"> </span><span class="hl-7">console</span><span class="hl-5">.</span><span class="hl-8">error</span><span class="hl-5">(</span><span class="hl-9">&quot;Did not render widget:&quot;</span><span class="hl-5">, </span><span class="hl-7">e</span><span class="hl-5">))</span>
+</code><button>Copy</button></pre>
+</div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/636c229/src/squatch.ts#L87">src/squatch.ts:87</a></li></ul></aside></li></ul></section></div>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/0acc249/src/squatch.ts#L105">src/squatch.ts:105</a></li></ul></aside></li></ul></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
