--- a/pull/58/classes/Widgets.html
+++ b/pull/58/classes/Widgets.html
@@ -25,7 +25,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">Widgets</span></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/4e222b3/src/widgets/Widgets.ts#L27">src/widgets/Widgets.ts:27</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/6ce997c/src/widgets/Widgets.ts#L27">src/widgets/Widgets.ts:27</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -77,29 +77,47 @@
 </code><button>Copy</button></pre>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/4e222b3/src/widgets/Widgets.ts#L49">src/widgets/Widgets.ts:49</a></li></ul></aside></li></ul></section></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/6ce997c/src/widgets/Widgets.ts#L66">src/widgets/Widgets.ts:66</a></li></ul></aside></li></ul></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Properties</h2>
 <section class="tsd-panel tsd-member"><a id="api" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>api</span><a href="#api" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
-<div class="tsd-signature"><span class="tsd-kind-property">api</span><span class="tsd-signature-symbol">:</span> <a href="WidgetApi.html" class="tsd-signature-type tsd-kind-class">WidgetApi</a></div><aside class="tsd-sources">
+<div class="tsd-signature"><span class="tsd-kind-property">api</span><span class="tsd-signature-symbol">:</span> <a href="WidgetApi.html" class="tsd-signature-type tsd-kind-class">WidgetApi</a></div>
+<div class="tsd-comment tsd-typography"><p>Instance of <a href="WidgetApi.html" class="tsd-kind-class">WidgetApi</a></p>
+</div>
+<div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/4e222b3/src/widgets/Widgets.ts#L28">src/widgets/Widgets.ts:28</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/6ce997c/src/widgets/Widgets.ts#L31">src/widgets/Widgets.ts:31</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="domain" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>domain</span><a href="#domain" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
-<div class="tsd-signature"><span class="tsd-kind-property">domain</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
+<div class="tsd-signature"><span class="tsd-kind-property">domain</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+<div class="tsd-comment tsd-typography"><p>SaaSquatch domain for API requests.</p>
+</div>
+<div class="tsd-comment tsd-typography">
+<h4>Default</h4><pre><code class="language-ts"><span class="hl-9">&quot;https://app.referralsaasquatch.com&quot;</span>
+</code><button>Copy</button></pre>
+</div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/4e222b3/src/widgets/Widgets.ts#L30">src/widgets/Widgets.ts:30</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/6ce997c/src/widgets/Widgets.ts#L42">src/widgets/Widgets.ts:42</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="npmCdn" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>npm<wbr/>Cdn</span><a href="#npmCdn" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
-<div class="tsd-signature"><span class="tsd-kind-property">npm<wbr/>Cdn</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
+<div class="tsd-signature"><span class="tsd-kind-property">npm<wbr/>Cdn</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+<div class="tsd-comment tsd-typography"><p>Hosted CDN for npm packages</p>
+</div>
+<div class="tsd-comment tsd-typography">
+<h4>Default</h4><pre><code class="language-ts"><span class="hl-9">&quot;https://fast.ssqt.io/npm&quot;</span>
+</code><button>Copy</button></pre>
+</div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/4e222b3/src/widgets/Widgets.ts#L31">src/widgets/Widgets.ts:31</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/6ce997c/src/widgets/Widgets.ts#L48">src/widgets/Widgets.ts:48</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="tenantAlias" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>tenant<wbr/>Alias</span><a href="#tenantAlias" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
-<div class="tsd-signature"><span class="tsd-kind-property">tenant<wbr/>Alias</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
+<div class="tsd-signature"><span class="tsd-kind-property">tenant<wbr/>Alias</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+<div class="tsd-comment tsd-typography"><p>Tenant alias of SaaSquatch tenant.</p>
+</div>
+<div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/4e222b3/src/widgets/Widgets.ts#L29">src/widgets/Widgets.ts:29</a></li></ul></aside></section></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/6ce997c/src/widgets/Widgets.ts#L36">src/widgets/Widgets.ts:36</a></li></ul></aside></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Methods</h2>
 <section class="tsd-panel tsd-member"><a id="autofill" class="tsd-anchor"></a>
@@ -121,7 +139,7 @@ Uses <a href="WidgetApi.html#squatchReferralCookie" class="tsd-kind-method">squa
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/4e222b3/src/widgets/Widgets.ts#L145">src/widgets/Widgets.ts:145</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/6ce997c/src/widgets/Widgets.ts#L161">src/widgets/Widgets.ts:161</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="render" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>render</span><a href="#render" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -142,7 +160,7 @@ the widget if it is successful. Otherwise it shows the &quot;error&quot; widget.
 
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/4e222b3/src/widgets/Widgets.ts#L116">src/widgets/Widgets.ts:116</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/6ce997c/src/widgets/Widgets.ts#L132">src/widgets/Widgets.ts:132</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="upsertUser" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>upsert<wbr/>User</span><a href="#upsertUser" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -163,7 +181,7 @@ the widget if it is successful. Otherwise it shows the &quot;error&quot; widget.
 
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/4e222b3/src/widgets/Widgets.ts#L74">src/widgets/Widgets.ts:74</a></li></ul></aside></li></ul></section></section></div>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/6ce997c/src/widgets/Widgets.ts#L90">src/widgets/Widgets.ts:90</a></li></ul></aside></li></ul></section></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
