--- a/pull/58/types/WidgetContext.html
+++ b/pull/58/types/WidgetContext.html
@@ -15,35 +15,9 @@
 <li><a href="../modules.html">@saasquatch/squatch-js</a></li>
 <li><a href="WidgetContext.html">WidgetContext</a></li></ul>
 <h1>Type alias WidgetContext</h1></div>
-<div class="tsd-signature"><span class="tsd-kind-type-alias">Widget<wbr/>Context</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span><br/><span>    </span><span class="tsd-kind-property">container</span><span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type ">HTMLElement</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span><br/><span>    </span><span class="tsd-kind-property">displayOnLoad</span><span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">; </span><br/><span>    </span><span class="tsd-kind-property">engagementMedium</span><span class="tsd-signature-symbol">?: </span><a href="EngagementMedium.html" class="tsd-signature-type tsd-kind-type-alias">EngagementMedium</a><span class="tsd-signature-symbol">; </span><br/><span>    </span><span class="tsd-kind-property">trigger</span><span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span><br/><span>    </span><span class="tsd-kind-property">type</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">&quot;cookie&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;error&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;passwordless&quot;</span><span class="tsd-signature-symbol">; </span><br/><span class="tsd-signature-symbol">}</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-symbol">{ </span><br/><span>    </span><span class="tsd-kind-property">container</span><span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type ">HTMLElement</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span><br/><span>    </span><span class="tsd-kind-property">engagementMedium</span><span class="tsd-signature-symbol">?: </span><a href="EngagementMedium.html" class="tsd-signature-type tsd-kind-type-alias">EngagementMedium</a><span class="tsd-signature-symbol">; </span><br/><span>    </span><span class="tsd-kind-property">trigger</span><span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span><br/><span>    </span><span class="tsd-kind-property">type</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">&quot;upsert&quot;</span><span class="tsd-signature-symbol">; </span><br/><span>    </span><span class="tsd-kind-property">user</span><span class="tsd-signature-symbol">?: </span><a href="User.html" class="tsd-signature-type tsd-kind-type-alias">User</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span><span class="tsd-signature-symbol">; </span><br/><span class="tsd-signature-symbol">}</span></div>
-<div class="tsd-type-declaration">
-<h4>Type declaration</h4>
-<ul class="tsd-parameters">
-<li class="tsd-parameter">
-<h5><code class="tsd-tag ts-flagOptional">Optional</code> <span class="tsd-kind-property">container</span><span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type ">HTMLElement</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></h5></li>
-<li class="tsd-parameter">
-<h5><code class="tsd-tag ts-flagOptional">Optional</code> <span class="tsd-kind-property">display<wbr/>On<wbr/>Load</span><span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">boolean</span></h5></li>
-<li class="tsd-parameter">
-<h5><code class="tsd-tag ts-flagOptional">Optional</code> <span class="tsd-kind-property">engagement<wbr/>Medium</span><span class="tsd-signature-symbol">?: </span><a href="EngagementMedium.html" class="tsd-signature-type tsd-kind-type-alias">EngagementMedium</a></h5></li>
-<li class="tsd-parameter">
-<h5><code class="tsd-tag ts-flagOptional">Optional</code> <span class="tsd-kind-property">trigger</span><span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span></h5></li>
-<li class="tsd-parameter">
-<h5><span class="tsd-kind-property">type</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">&quot;cookie&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;error&quot;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">&quot;passwordless&quot;</span></h5></li></ul></div>
-<div class="tsd-type-declaration">
-<h4>Type declaration</h4>
-<ul class="tsd-parameters">
-<li class="tsd-parameter">
-<h5><code class="tsd-tag ts-flagOptional">Optional</code> <span class="tsd-kind-property">container</span><span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type ">HTMLElement</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></h5></li>
-<li class="tsd-parameter">
-<h5><code class="tsd-tag ts-flagOptional">Optional</code> <span class="tsd-kind-property">engagement<wbr/>Medium</span><span class="tsd-signature-symbol">?: </span><a href="EngagementMedium.html" class="tsd-signature-type tsd-kind-type-alias">EngagementMedium</a></h5></li>
-<li class="tsd-parameter">
-<h5><code class="tsd-tag ts-flagOptional">Optional</code> <span class="tsd-kind-property">trigger</span><span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span></h5></li>
-<li class="tsd-parameter">
-<h5><span class="tsd-kind-property">type</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">&quot;upsert&quot;</span></h5></li>
-<li class="tsd-parameter">
-<h5><code class="tsd-tag ts-flagOptional">Optional</code> <span class="tsd-kind-property">user</span><span class="tsd-signature-symbol">?: </span><a href="User.html" class="tsd-signature-type tsd-kind-type-alias">User</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></h5></li></ul></div><aside class="tsd-sources">
+<div class="tsd-signature"><span class="tsd-kind-type-alias">Widget<wbr/>Context</span><span class="tsd-signature-symbol">:</span> <a href="UpsertWidgetContext.html" class="tsd-signature-type tsd-kind-type-alias">UpsertWidgetContext</a><span class="tsd-signature-symbol"> | </span><a href="BaseWidgetContext.html" class="tsd-signature-type tsd-kind-type-alias">BaseWidgetContext</a></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2bb25a1/src/types.ts#L88">src/types.ts:88</a></li></ul></aside></div>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/050f1d7/src/types.ts#L104">src/types.ts:104</a></li></ul></aside></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -70,12 +44,14 @@
 <li><a href="../interfaces/CookieWidgetConfig.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Cookie<wbr/>Widget<wbr/>Config</span></a></li>
 <li><a href="../interfaces/WidgetConfig.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Widget<wbr/>Config</span></a></li>
 <li><a href="../interfaces/WidgetResult.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Widget<wbr/>Result</span></a></li>
-<li><a href="CookieUser.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-4194304"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-type-alias)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M11.31 16V8.224H8.91V7.24H14.79V8.224H12.39V16H11.31Z" fill="var(--color-text)"></path></g></svg><span>Cookie<wbr/>User</span></a></li>
+<li><a href="BaseWidgetContext.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-4194304"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-type-alias)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M11.31 16V8.224H8.91V7.24H14.79V8.224H12.39V16H11.31Z" fill="var(--color-text)"></path></g></svg><span>Base<wbr/>Widget<wbr/>Context</span></a></li>
+<li><a href="CookieUser.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Cookie<wbr/>User</span></a></li>
 <li><a href="DeclarativeConfigOptions.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Declarative<wbr/>Config<wbr/>Options</span></a></li>
 <li><a href="EngagementMedium.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Engagement<wbr/>Medium</span></a></li>
 <li><a href="JWT.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>JWT</span></a></li>
 <li><a href="ReferralCookie.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Referral<wbr/>Cookie</span></a></li>
 <li><a href="ShareMedium.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Share<wbr/>Medium</span></a></li>
+<li><a href="UpsertWidgetContext.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Upsert<wbr/>Widget<wbr/>Context</span></a></li>
 <li><a href="User.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>User</span></a></li>
 <li><a href="WidgetContext.html" class="current"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Widget<wbr/>Context</span></a></li>
 <li><a href="WidgetContextType.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Widget<wbr/>Context<wbr/>Type</span></a></li>
