--- a/pull/58/classes/EmbedWidget.html
+++ b/pull/58/classes/EmbedWidget.html
@@ -30,7 +30,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">EmbedWidget</span></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2bb25a1/src/widgets/EmbedWidget.ts#L20">src/widgets/EmbedWidget.ts:20</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/050f1d7/src/widgets/EmbedWidget.ts#L21">src/widgets/EmbedWidget.ts:21</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -79,7 +79,7 @@
 <h4 class="tsd-returns-title">Returns <a href="EmbedWidget.html" class="tsd-signature-type tsd-kind-class">EmbedWidget</a></h4><aside class="tsd-sources">
 <p>Overrides Widget.constructor</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2bb25a1/src/widgets/EmbedWidget.ts#L21">src/widgets/EmbedWidget.ts:21</a></li></ul></aside></li></ul></section></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/050f1d7/src/widgets/EmbedWidget.ts#L22">src/widgets/EmbedWidget.ts:22</a></li></ul></aside></li></ul></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Properties</h2>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="analyticsApi" class="tsd-anchor"></a>
@@ -87,25 +87,25 @@
 <div class="tsd-signature"><span class="tsd-kind-property">analytics<wbr/>Api</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type ">default</span></div><aside class="tsd-sources">
 <p>Inherited from Widget.analyticsApi</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2bb25a1/src/widgets/Widget.ts#L45">src/widgets/Widget.ts:45</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/050f1d7/src/widgets/Widget.ts#L45">src/widgets/Widget.ts:45</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="container" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>container</span><a href="#container" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">container</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type ">HTMLElement</span></div><aside class="tsd-sources">
 <p>Inherited from Widget.container</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2bb25a1/src/widgets/Widget.ts#L49">src/widgets/Widget.ts:49</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/050f1d7/src/widgets/Widget.ts#L49">src/widgets/Widget.ts:49</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="content" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>content</span><a href="#content" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">content</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
 <p>Inherited from Widget.content</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2bb25a1/src/widgets/Widget.ts#L44">src/widgets/Widget.ts:44</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/050f1d7/src/widgets/Widget.ts#L44">src/widgets/Widget.ts:44</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="context" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>context</span><a href="#context" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">context</span><span class="tsd-signature-symbol">:</span> <a href="../types/WidgetContext.html" class="tsd-signature-type tsd-kind-type-alias">WidgetContext</a></div><aside class="tsd-sources">
 <p>Inherited from Widget.context</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2bb25a1/src/widgets/Widget.ts#L47">src/widgets/Widget.ts:47</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/050f1d7/src/widgets/Widget.ts#L47">src/widgets/Widget.ts:47</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="hide" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>hide</span><a href="#hide" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">hide</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> = ...</span></div>
@@ -118,13 +118,13 @@
 <li class="tsd-description">
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4></li></ul></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2bb25a1/src/widgets/EmbedWidget.ts#L131">src/widgets/EmbedWidget.ts:131</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/050f1d7/src/widgets/EmbedWidget.ts#L140">src/widgets/EmbedWidget.ts:140</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="npmCdn" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>npm<wbr/>Cdn</span><a href="#npmCdn" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">npm<wbr/>Cdn</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
 <p>Inherited from Widget.npmCdn</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2bb25a1/src/widgets/Widget.ts#L48">src/widgets/Widget.ts:48</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/050f1d7/src/widgets/Widget.ts#L48">src/widgets/Widget.ts:48</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="show" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>show</span><a href="#show" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">show</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> = ...</span></div>
@@ -140,19 +140,19 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
 <div class="tsd-comment tsd-typography"></div></li></ul></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2bb25a1/src/widgets/EmbedWidget.ts#L130">src/widgets/EmbedWidget.ts:130</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/050f1d7/src/widgets/EmbedWidget.ts#L139">src/widgets/EmbedWidget.ts:139</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="type" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>type</span><a href="#type" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">type</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
 <p>Inherited from Widget.type</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2bb25a1/src/widgets/Widget.ts#L43">src/widgets/Widget.ts:43</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/050f1d7/src/widgets/Widget.ts#L43">src/widgets/Widget.ts:43</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="widgetApi" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>widget<wbr/>Api</span><a href="#widgetApi" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">widget<wbr/>Api</span><span class="tsd-signature-symbol">:</span> <a href="WidgetApi.html" class="tsd-signature-type tsd-kind-class">WidgetApi</a></div><aside class="tsd-sources">
 <p>Inherited from Widget.widgetApi</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2bb25a1/src/widgets/Widget.ts#L46">src/widgets/Widget.ts:46</a></li></ul></aside></section></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/050f1d7/src/widgets/Widget.ts#L46">src/widgets/Widget.ts:46</a></li></ul></aside></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Methods</h2>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="_createFrame" class="tsd-anchor"></a>
@@ -163,7 +163,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">HTMLIFrameElement</span></h4><aside class="tsd-sources">
 <p>Inherited from Widget._createFrame</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2bb25a1/src/widgets/Widget.ts#L96">src/widgets/Widget.ts:96</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/050f1d7/src/widgets/Widget.ts#L96">src/widgets/Widget.ts:96</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="_findElement" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>_find<wbr/>Element</span><a href="#_findElement" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited">
@@ -172,7 +172,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">HTMLElement</span></h4><aside class="tsd-sources">
 <p>Inherited from Widget._findElement</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2bb25a1/src/widgets/Widget.ts#L63">src/widgets/Widget.ts:63</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/050f1d7/src/widgets/Widget.ts#L63">src/widgets/Widget.ts:63</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="_findFrame" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>_find<wbr/>Frame</span><a href="#_findFrame" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited">
@@ -181,7 +181,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">null</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type ">HTMLIFrameElement</span></h4><aside class="tsd-sources">
 <p>Inherited from Widget._findFrame</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2bb25a1/src/widgets/Widget.ts#L111">src/widgets/Widget.ts:111</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/050f1d7/src/widgets/Widget.ts#L111">src/widgets/Widget.ts:111</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="close" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>close</span><a href="#close" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -189,7 +189,7 @@
 <li class="tsd-description">
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2bb25a1/src/widgets/EmbedWidget.ts#L114">src/widgets/EmbedWidget.ts:114</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/050f1d7/src/widgets/EmbedWidget.ts#L112">src/widgets/EmbedWidget.ts:112</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="load" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>load</span><a href="#load" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -198,7 +198,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <p>Overrides Widget.load</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2bb25a1/src/widgets/EmbedWidget.ts#L28">src/widgets/EmbedWidget.ts:28</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/050f1d7/src/widgets/EmbedWidget.ts#L28">src/widgets/EmbedWidget.ts:28</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="open" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>open</span><a href="#open" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -209,7 +209,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2bb25a1/src/widgets/EmbedWidget.ts#L97">src/widgets/EmbedWidget.ts:97</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/050f1d7/src/widgets/EmbedWidget.ts#L92">src/widgets/EmbedWidget.ts:92</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="reload" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>reload</span><a href="#reload" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited">
@@ -235,7 +235,7 @@ Primarily for Classic widgets with registration</p>
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <p>Inherited from Widget.reload</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2bb25a1/src/widgets/Widget.ts#L260">src/widgets/Widget.ts:260</a></li></ul></aside></li></ul></section></section></div>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/050f1d7/src/widgets/Widget.ts#L260">src/widgets/Widget.ts:260</a></li></ul></aside></li></ul></section></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -283,12 +283,14 @@ Primarily for Classic widgets with registration</p>
 <li><a href="../interfaces/CookieWidgetConfig.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Cookie<wbr/>Widget<wbr/>Config</span></a></li>
 <li><a href="../interfaces/WidgetConfig.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Widget<wbr/>Config</span></a></li>
 <li><a href="../interfaces/WidgetResult.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Widget<wbr/>Result</span></a></li>
-<li><a href="../types/CookieUser.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-4194304"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-type-alias)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M11.31 16V8.224H8.91V7.24H14.79V8.224H12.39V16H11.31Z" fill="var(--color-text)"></path></g></svg><span>Cookie<wbr/>User</span></a></li>
+<li><a href="../types/BaseWidgetContext.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-4194304"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-type-alias)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M11.31 16V8.224H8.91V7.24H14.79V8.224H12.39V16H11.31Z" fill="var(--color-text)"></path></g></svg><span>Base<wbr/>Widget<wbr/>Context</span></a></li>
+<li><a href="../types/CookieUser.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Cookie<wbr/>User</span></a></li>
 <li><a href="../types/DeclarativeConfigOptions.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Declarative<wbr/>Config<wbr/>Options</span></a></li>
 <li><a href="../types/EngagementMedium.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Engagement<wbr/>Medium</span></a></li>
 <li><a href="../types/JWT.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>JWT</span></a></li>
 <li><a href="../types/ReferralCookie.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Referral<wbr/>Cookie</span></a></li>
 <li><a href="../types/ShareMedium.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Share<wbr/>Medium</span></a></li>
+<li><a href="../types/UpsertWidgetContext.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Upsert<wbr/>Widget<wbr/>Context</span></a></li>
 <li><a href="../types/User.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>User</span></a></li>
 <li><a href="../types/WidgetContext.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Widget<wbr/>Context</span></a></li>
 <li><a href="../types/WidgetContextType.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Widget<wbr/>Context<wbr/>Type</span></a></li>
