--- a/pull/58/types/EngagementMedium.html
+++ b/pull/58/types/EngagementMedium.html
@@ -23,7 +23,7 @@
 </code><button>Copy</button></pre>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2bb25a1/src/types.ts#L82">src/types.ts:82</a></li></ul></aside></div>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/050f1d7/src/types.ts#L82">src/types.ts:82</a></li></ul></aside></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -50,12 +50,14 @@
 <li><a href="../interfaces/CookieWidgetConfig.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Cookie<wbr/>Widget<wbr/>Config</span></a></li>
 <li><a href="../interfaces/WidgetConfig.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Widget<wbr/>Config</span></a></li>
 <li><a href="../interfaces/WidgetResult.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Widget<wbr/>Result</span></a></li>
-<li><a href="CookieUser.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-4194304"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-type-alias)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M11.31 16V8.224H8.91V7.24H14.79V8.224H12.39V16H11.31Z" fill="var(--color-text)"></path></g></svg><span>Cookie<wbr/>User</span></a></li>
+<li><a href="BaseWidgetContext.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-4194304"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-type-alias)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M11.31 16V8.224H8.91V7.24H14.79V8.224H12.39V16H11.31Z" fill="var(--color-text)"></path></g></svg><span>Base<wbr/>Widget<wbr/>Context</span></a></li>
+<li><a href="CookieUser.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Cookie<wbr/>User</span></a></li>
 <li><a href="DeclarativeConfigOptions.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Declarative<wbr/>Config<wbr/>Options</span></a></li>
 <li><a href="EngagementMedium.html" class="current"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Engagement<wbr/>Medium</span></a></li>
 <li><a href="JWT.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>JWT</span></a></li>
 <li><a href="ReferralCookie.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Referral<wbr/>Cookie</span></a></li>
 <li><a href="ShareMedium.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Share<wbr/>Medium</span></a></li>
+<li><a href="UpsertWidgetContext.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Upsert<wbr/>Widget<wbr/>Context</span></a></li>
 <li><a href="User.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>User</span></a></li>
 <li><a href="WidgetContext.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Widget<wbr/>Context</span></a></li>
 <li><a href="WidgetContextType.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Widget<wbr/>Context<wbr/>Type</span></a></li>
